Version 2.40 - 22 December 2016 by Thomas Backlund

- just did it again, none!

Version 2.39 - 8 September 2016 by Thierry Vignaud

- none! just making merging easier..

Version 2.38 - 8 July 2016 by Thierry Vignaud

- include virtio-console

Version 2.37 - 5 July 2016 by Thierry Vignaud

- sync with kernel-4.7

Version 2.36 - 30 June 2016 by Thierry Vignaud

- include some missing wireless drivers (mga#16768)

Version 2.35 - 20 May 2016 by Thomas Backlund

- add sha512 sums for images

Version 2.34 - 10 May 2016 by Thomas Backlund

- adjust image creation for new dosfstools 4 using 63 cylinders everywhere

Version 2.33 - 26 Apr 2016 by Thierry Vignaud

- sync with kernel-4.6

Version 2.32 - 21 Feb 2016 by Anne Nicolas

- back to arch dependant isolinux.bin (mga#17771)

Version 2.31 - 10 Jan 2016 by Thomas Backlund

- drop (broken) support for Alpha, IA64 & PPC, Sparc
- psmouse is now modular, so add it to list_modules.pm (mga#17470)

Version 2.30 - 22 Dec 2015 by Thierry Vignaud

- sync with kernel-4.4

Version 2.29 - 4 Dec 2015 by Thierry Vignaud

- sync with kernel-4.3

Version 2.28 - 27 Aug 2015 by Thierry Vignaud

- sync with kernel-4.1

Version 2.24 - 8 May 2015 by Thierry Vignaud

- include r8723bs (mga#15874)

Version 2.19 - 7 April 2015 by Thomas Backlund

- create efi loader at build time

Version 2.18 - 6 April 2015 by Anne Nicolas

- use noiswmd as default boot option (mga#11105)

Version 2.17 - 17 March 2015 by Thierry Vignaud

- include virtio_rng

Version 2.16.1 -  6 July 2015 by Per Øyvind Karlsen <proyvind@moondrake.org>

- drop /lib/udev/rules.d/60-keyboard.rules as it's dropped from systemd
  (don't know implications of for now at least...)
- add support for specifying what keytable to load with a kernel argument
- compress grub files with xz

Version 2.16 - 28 January 2015 by Thierry Vignaud

- sync with kernel-3.19
- add efibootmgr on x86_64

Version 2.15 - 20 December 2014 by Thierry Vignaud

- sync with kernel-3.18 (mga#14799)
