@@ -1,3 +1,6 @@
+- bootloader:
+  o disable audit logging as it floods the logs
+
 Version 17.65 - 12 December 2016
 
 - drakboot:
