@@ -1,3 +1,6 @@
+- bootloader:
+  o disable audit logging as it floods the logs
+
 Version 17.68 - 14 December 2016
 
 - fix progress bar on i586 (mga#19930)
