@@ -1,3 +1,5 @@
+- disable audit logging as it floods the logs
+
 Version 2.40 - 22 December 2016 by Thomas Backlund
 
 - just did it again, none!
